@@ -42,7 +42,7 @@ LOGDIR=${FILEDIR}/logs
 RPTDIR=${FILEDIR}/reports
 OUTPUTDIR=${FILEDIR}/output
 INPUTDIR=${FILEDIR}/input
-INFILE_NAME_GZ=${DATADOWNLOADS}/build.berkeleybop.org/view/GO/job/export-lego-to-legacy/108/artifact/legacy/gpad/production/mgi.gpad
+INFILE_NAME_GZ=${DATADOWNLOADS}/build.berkeleybop.org/view/GO/job/export-lego-to-legacy/lastSuccessfulBuild/artifact/legacy/gpad/production/mgi.gpad
 INFILE_NAME_GPAD=${INPUTDIR}/mgi.gpad
 INFILE_NAME=${INPUTDIR}/goamousenoctua.annot
 INFILE_NAME_ERROR=${INPUTDIR}/goamousenoctua.error
